ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: todo-app.io
      http:
        paths:
          - path: /back/
            pathType: Prefix
            backend:
              service:
                name: todo-app-backend
                port:
                  number: 8000
          - path: /front/
            pathType: Prefix
            backend:
              service:
                name: todo-app-frontend
                port:
                  number: 3000
